libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__let_in_no_in.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
----------------------------------- MODULE B -----------------------------------
Send ==
    /\ i <= n
    /\ \E v \in 0..n: i <= v /\ v <= i + l /\ v \notin got
    /\ LET k == CHOOSE val \in 0..n: (val \in i..i + l /\ val \notin got) IN
        /\ chan' = chan \union {<< k, INPUT[k] >>}
    /\ UNCHANGED << i, INPUT, OUTPUT, got, ack, complete >>
================================================================================
