libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__let_in_small.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
-------------------------------- MODULE Bananas --------------------------------
Integrate(D, a, b, InitVals) ==
    LET n == Len(InitVals)
    gg == CHOOSE g:
        \E e \in PosReal:
            /\ \A r \in OpenInterval(a - e, b + e):
                D[<< r >> \o [i \in 1..(n + 1) |-> g[i - 1][r]]] = 0
    IN [i \in 1..n |-> gg[i - 1][b]]
================================================================================
