libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__spec_theorem.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
-------------------------------- MODULE Bananas --------------------------------
Spec == \* Initialize state with Init and transition with Next.
    Init /\ [][Next]_<< store, tx, snapshotStore, written, missed >>
--------------------------------------------------------------------------------
THEOREM Spec => [](TypeInvariant /\ TxLifecycle)
================================================================================
